sandbox/output
StringCalculator.java:23: error: ';' expected
        return ret
                  ^
1 error
